# unsw-cli

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
tests/: __init__.py  _skip_helpers.py  conftest.py  test_cli.py  test_config.py  test_integration.py  test_output.py
tests/auth/: __init__.py  test_moodle.py  test_myunsw.py  test_sso.py  test_webcms3.py
tests/modules/: __init__.py  test_handbook.py  test_library.py  test_moodle.py  test_myunsw.py  test_timetable.py  test_webcms3.py
unsw/: __init__.py  __main__.py  cli.py  config.py
unsw/auth/: __init__.py  browser.py  moodle.py  myunsw.py  sso.py  webcms3.py
unsw/modules/: __init__.py  base.py  handbook.py  library.py  moodle.py  myunsw.py  timetable.py  webcms3.py
unsw/utils/: http.py  output.py
