[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unsw-cli"
version = "0.1.0"
description = "UNSW CLI - Manage Moodle, WebCMS3, Handbook, Timetable & Library from your terminal"
authors = [
    {name = "UNSW CLI"},
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1",
    "httpx>=0.27,<1",
    "rich>=13,<14",
    "beautifulsoup4>=4.12,<5",
    "pyyaml>=6.0,<7",
    "pydantic>=2,<3",
    "keyring>=25,<26",
    "playwright>=1.45,<2",
]

[project.scripts]
unsw = "unsw.cli:app"

[tool.hatch.build]
packages = ["unsw"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-mock>=3.14,<4",
    "respx>=0.21,<1",
]
